# roselet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  AI_RULES.md  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  DEVLOG.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  PRODUCT.md  PROGRESS.md  README.md  README_zh.md  SECURITY.md  _typos.toml  cliff.toml  deny.toml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.claude/plan/: feedback-form-enhancement.md
.claude/prds/: roselet-community-garden.prd.md
.config/: nextest.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  deploy-backend.yml
.impeccable/: design.json
.sqlx/: query-5ee591d9a2aab5566778e87f336c57b1821b2061b527b08c2949b2f5717ac31b.json
apps/miniprogram/: .env.example  .gitignore  jest.config.ts  package.json  project.config.json  project.config.template.json  tsconfig.json
apps/web/: .gitignore  eslint.config.mjs  jest.config.ts  next.config.ts  package.json  playwright-ct.config.ts  pnpm-lock.yaml
apps/worker-api/: README.md  package.json  tsconfig.json  wrangler.jsonc
crates/backend/: Cargo.toml
crates/backend/migrations/: 001_create_rose.sql  002_create_user.sql  003_create_like.sql  004_add_ai_reply.sql  005_add_indexes.sql  006_refresh_tokens.sql  007_create_feedbacks.sql  008_add_privacy.sql  009_add_recipient.sql  010_add_passphrase.sql  011_soft_delete_users.sql
crates/backend/src/: ai.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs
crates/backend/src/models/: mod.rs  pagination.rs  rose.rs  user.rs
crates/backend/src/routes/: activity.rs  auth.rs  docs.rs  feedback.rs  garden.rs  health.rs  like.rs  mod.rs  my.rs  openapi.json  rose.rs  stats.rs  swagger.html  ws.rs
crates/backend/tests/: api_test.rs
crates/recommend/: Cargo.toml
crates/recommend/src/: api_client.rs  audio.rs  color.rs  datefmt.rs  emotion.rs  fireworks.rs  flowers.rs  garden.rs  keywords.rs  lib.rs  offline.rs  petal.rs  plant.rs  sky.rs  store.rs  tips.rs
deploy/lightsail/: Caddyfile  docker-compose.backend.yml
docs/: AWS_LIGHTSAIL_DEPLOYMENT.md  CLOUDFLARE_DEPLOYMENT_ROADMAP.md  CLOUDFLARE_MIGRATION_PLAN.md  CLOUDFLARE_WORKER_API.md  DEPLOYMENT_ENV_TEMPLATE.md  DEPLOYMENT_OPTIONS_COMPARISON.md  FREE_DEPLOYMENT_CHECKLIST.md  FREE_DEPLOYMENT_PLAN.md  GIFT_ROSE.md  I18N_STRATEGY.md  MINIPROGRAM_CLOUD_TEST.md  PRESENTATION.md  RELEASE_PROCESS.md  RUST_DEV_WORKFLOW_EXPERIENCE.md  TAURI_SPIKE.md
docs/screenshots/: README.md  index.html  take-screenshots.mjs
scripts/: init-miniprogram.sh  lightsail-deploy.sh  patch-wasm.js
(+147 files in other folders)
