[package]
name = "roselet-recommend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
regex = "1.10"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
